tests/invalid/test_059.wyal
define NatArray(int[] xs) is:
   forall (int i):
     (i < |xs|) ==> (xs[i] >= 0)

assert:
  forall(int x, int[] xs):
    if:
       NatArray(xs)
       xs[0] == x
    then:
       x > 0